--- a/index_list/editmember.html
+++ b/index_list/editmember.html
@@ -29,9 +29,9 @@
 
     <aside class="aside_menu">
       <div class="panel-group" id="accordion">
-        <div class="panel panel-default">
+        <div class="panel panel-default default">
           <div class="panel-heading">
-            <h4 class="panel-title"><a href="member.html">會員資料</a></h4>
+            <h4 class="panel-title"><a href="#">會員資料</a></h4>
           </div>
         </div>
         <div class="panel panel-default">
