購物車更新

--- a/index_list/orderpage_group_order_on.html
+++ b/index_list/orderpage_group_order_on.html
@@ -80,7 +80,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -117,7 +117,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -154,7 +154,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -191,7 +191,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -209,7 +209,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -237,7 +237,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -256,7 +256,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -275,7 +275,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -294,7 +294,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -324,7 +324,7 @@
 
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -342,7 +342,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -361,7 +361,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
