--- a/index_list/orderpage.html
+++ b/index_list/orderpage.html
@@ -94,7 +94,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -113,7 +113,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -150,7 +150,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -187,7 +187,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -205,7 +205,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -233,7 +233,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -252,7 +252,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -271,7 +271,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -290,7 +290,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -320,7 +320,7 @@
 
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -338,7 +338,7 @@
                 </div>
                 <!-- 加入購物車 -->
                 <div>
-                    <button class="btn_add_cart">加入購物車</button>
+                    <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                 </div>
             </div>
 
@@ -357,7 +357,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
