--- a/index_list/orderfinished.html
+++ b/index_list/orderfinished.html
@@ -26,7 +26,7 @@
   <div class="headerpage"></div>
   <!-- header -->
 
-  <div class="container-fluid">
+  <div class="container">
     <div class="order_finish_div">
       <div class="order_finish">
         <p style="font-size: x-large"><i class="fas fa-check"></i> 完成訂單</p>
