--- a/index_list/restaurant_login.html
+++ b/index_list/restaurant_login.html
@@ -77,7 +77,7 @@
         });
 
         function login() {
-            window.location = "index.html";
+            window.location = "restaurant_login_index.html";
         }
     </script>
 </body>
