--- a/index_list/restaurant_login_index.html
+++ b/index_list/restaurant_login_index.html
@@ -24,7 +24,16 @@
 <body>
     <!-- 導覽列 start -->
 
-    <div class="header_page"></div>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="LOGO"></a>
+            <div class="rwd_icon">
+                <a class="nav_a" href="list.html"><i class="fas fa-store"></i></a>
+                <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i></a>
+                <a class="nav_a" href="member_login.html"><i class="fas fa-user-circle"></i></a>
+            </div>
+        </nav>
+    </header>
 
     <!-- 導覽列 over -->
 
@@ -39,14 +48,14 @@
                         <div class="restaurant_management">
                             <div class="restaurant_order">
                                 <div class="restaurant_detail">
-                                    <h2>訂位管理</h2>
+                                    <h2><a href="">訂位管理</a></h2>
                                 </div>
                                 <h3>今日訂位數: </h3>
                                 <h3>明日訂位數: </h3>
                             </div>
                             <div class="restaurant_order">
                                 <div class="restaurant_detail">
-                                    <h2>訂餐管理</h2>
+                                    <h2><a href="">訂餐管理</a></h2>
                                 </div>
                                 <h3>待處理訂餐數: </h3>
                                 <h3>已完成訂單數: </h3>
