--- a/index_list/shoppingchar.html
+++ b/index_list/shoppingchar.html
@@ -306,7 +306,7 @@
                         <b>總金額(3個商品)$1234</b>
                     </p>
                     <button class="buy-btn">
-                        <b>結帳</b>
+                        <a href="shoppingok.html"><b>結帳</b></a>
                     </button>
                 </div>
             </div>
