--- a/index_list/list_demo_kind.html
+++ b/index_list/list_demo_kind.html
@@ -23,131 +23,142 @@
 
 <body>
     <!-- 導覽列 start -->
-
-    <div class="header_page"></div>
-
-    <!-- 導覽列 over -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="LOGO"></a>
+            <div class="nav_icon">
+                <a class="nav_a" href="list.html"><i class="fas fa-store"></i>餐廳列表</a>
+                <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i>購物車</a>
+                <a class="nav_a" href="member_login.html"><i class="fas fa-user-circle"></i>會員登入</a>
+            </div>
+            <div class="rwd_icon">
+                <a class="nav_a" href="list.html"><i class="fas fa-store"></i></a>
+                <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i></a>
+                <a class="nav_a" href="member_login.html"><i class="fas fa-user-circle"></i></a>
+            </div>
+        </nav>
+    </header>
+    <!-- 導覽列 end -->
 
     <section id="search_list">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <!-- <form action="" method=""> -->
-                        <div class="search_div">
-                            <input class="search_keyword" id="keyword" type="text" placeholder="請輸入餐廳關鍵字">
-                            <div class="area_div">
-                                <input type="checkbox" class="area_btn" id="area_btn">
-                                <label for="area_btn" class="area_label dropdown_label"><i
-                                        class="fas fa-map-marker-alt"></i>請選擇地區<i class="fas fa-sort-down"></i></label>
+                    <div class="search_div">
+                        <input class="search_keyword" id="keyword" type="text" placeholder="請輸入餐廳關鍵字">
+                        <div class="area_div">
+                            <input type="checkbox" class="area_btn" id="area_btn">
+                            <label for="area_btn" class="area_label dropdown_label"><i
+                                    class="fas fa-map-marker-alt"></i>請選擇地區<i class="fas fa-sort-down"></i></label>
 
-                                <div class="tab_div dropdown_div">
-                                    <div class="tab_css">
-                                        <!-- 北部區塊 start -->
-                                        <input id="tab1" type="radio" name="tab" checked="checked" />
-                                        <label for="tab1">北部</label>
-                                        <div class="tab_content">
-                                            <span>基隆市</span>
-                                            <span>台北市</span>
-                                            <span>新北市</span>
-                                            <span>桃園市</span>
-                                            <span>新竹市</span>
-                                            <span>新竹縣</span>
-                                        </div>
-                                        <!-- 北部區塊 end -->
-
-                                        <!-- 中部區塊 start -->
-                                        <input id="tab2" type="radio" name="tab" />
-                                        <label for="tab2">中部</label>
-                                        <div class="tab_content">
-                                            <span>苗栗縣</span>
-                                            <span>台中市</span>
-                                            <span>南投縣</span>
-                                            <span>彰化縣</span>
-                                            <span>雲林縣</span>
-                                        </div>
-                                        <!-- 中部區塊 end -->
-
-                                        <!-- 南部區塊 start -->
-                                        <input id="tab3" type="radio" name="tab" />
-                                        <label for="tab3">南部</label>
-                                        <div class="tab_content">
-                                            <span>嘉義市</span>
-                                            <span>嘉義縣</span>
-                                            <span>台南市</span>
-                                            <span>高雄市</span>
-                                            <span>屏東縣</span>
-                                        </div>
-                                        <!-- 南部區塊 end -->
-
-                                        <!-- 東部區塊 start -->
-                                        <input id="tab4" type="radio" name="tab" />
-                                        <label for="tab4">東部</label>
-                                        <div class="tab_content">
-                                            <span>宜蘭縣</span>
-                                            <span>花蓮縣</span>
-                                            <span>台東縣</span>
-                                        </div>
-                                        <!-- 東部區塊 end -->
-
-                                        <!-- 離島區塊 start -->
-                                        <input id="tab5" type="radio" name="tab" />
-                                        <label for="tab5">離島</label>
-                                        <div class="tab_content">
-                                            <span>澎湖縣</span>
-                                            <span>連江縣</span>
-                                            <span>金門縣</span>
-                                        </div>
-                                        <!-- 離島區塊 end -->
-
+                            <div class="tab_div dropdown_div">
+                                <div class="tab_css">
+                                    <!-- 北部區塊 start -->
+                                    <input id="tab1" type="radio" name="tab" checked="checked" />
+                                    <label for="tab1">北部</label>
+                                    <div class="tab_content">
+                                        <span>基隆市</span>
+                                        <span>台北市</span>
+                                        <span>新北市</span>
+                                        <span>桃園市</span>
+                                        <span>新竹市</span>
+                                        <span>新竹縣</span>
                                     </div>
-                                    <div class="tab_close">
-                                        關閉
+                                    <!-- 北部區塊 end -->
+
+                                    <!-- 中部區塊 start -->
+                                    <input id="tab2" type="radio" name="tab" />
+                                    <label for="tab2">中部</label>
+                                    <div class="tab_content">
+                                        <span>苗栗縣</span>
+                                        <span>台中市</span>
+                                        <span>南投縣</span>
+                                        <span>彰化縣</span>
+                                        <span>雲林縣</span>
                                     </div>
+                                    <!-- 中部區塊 end -->
+
+                                    <!-- 南部區塊 start -->
+                                    <input id="tab3" type="radio" name="tab" />
+                                    <label for="tab3">南部</label>
+                                    <div class="tab_content">
+                                        <span>嘉義市</span>
+                                        <span>嘉義縣</span>
+                                        <span>台南市</span>
+                                        <span>高雄市</span>
+                                        <span>屏東縣</span>
+                                    </div>
+                                    <!-- 南部區塊 end -->
+
+                                    <!-- 東部區塊 start -->
+                                    <input id="tab4" type="radio" name="tab" />
+                                    <label for="tab4">東部</label>
+                                    <div class="tab_content">
+                                        <span>宜蘭縣</span>
+                                        <span>花蓮縣</span>
+                                        <span>台東縣</span>
+                                    </div>
+                                    <!-- 東部區塊 end -->
+
+                                    <!-- 離島區塊 start -->
+                                    <input id="tab5" type="radio" name="tab" />
+                                    <label for="tab5">離島</label>
+                                    <div class="tab_content">
+                                        <span>澎湖縣</span>
+                                        <span>連江縣</span>
+                                        <span>金門縣</span>
+                                    </div>
+                                    <!-- 離島區塊 end -->
+
                                 </div>
-                            </div>
-
-                            <div class="other_div">
-                                <input type="checkbox" class="other_btn" id="other_btn">
-                                <label for="other_btn" class="other_label dropdown_label"><i
-                                        class="fas fa-hand-point-up"></i>進階搜尋<i class="fas fa-sort-down"></i></label>
-
-                                <div class="chk_div dropdown_div">
-                                    <div class="chk_css">
-                                        <input class="chk_item" type="checkbox" id="child_seats" name="child_seats"
-                                            value="2">
-                                        <label for="child_seats">提供兒童座椅</label>
-                                        <input class="chk_item" type="checkbox" id="barrier_free" name="barrier_free"
-                                            value="2">
-                                        <label for="barrier_free">無障礙設施</label>
-                                        <input class="chk_item" type="checkbox" id="min_consumption"
-                                            name="min_consumption" value="2">
-                                        <label for="min_consumption">最低消費限制</label>
-                                        <input class="chk_item" type="checkbox" id="limit_meal_time"
-                                            name="limit_meal_time" value="2">
-                                        <label for="limit_meal_time">限制用餐時間</label>
-                                        <input class="chk_item" type="checkbox" id="service_free" name="service_free"
-                                            value="2">
-                                        <label for="service_free">收取服務費</label>
-                                        <input class="chk_item" type="checkbox" id="allow_pets" name="allow_pets"
-                                            value="2">
-                                        <label for="allow_pets">允許攜帶寵物</label>
-                                        <input class="chk_item" type="checkbox" id="delivery" name="delivery" value="2">
-                                        <label for="delivery">提供外送</label>
-                                        <input class="chk_item" type="checkbox" id="parking" name="parking" value="2">
-                                        <label for="parking">附設停車場</label>
-                                    </div>
-                                    <div class="chk_close">
-                                        關閉
-                                    </div>
+                                <div class="tab_close">
+                                    關閉
                                 </div>
-                            </div>
-
-                            <div class="dropdown">
-                                <a href="list_demo_search.html">
-                                    <button class="search_btn">搜尋</button>
-                                </a>
                             </div>
                         </div>
+
+                        <div class="other_div">
+                            <input type="checkbox" class="other_btn" id="other_btn">
+                            <label for="other_btn" class="other_label dropdown_label"><i
+                                    class="fas fa-hand-point-up"></i>進階搜尋<i class="fas fa-sort-down"></i></label>
+
+                            <div class="chk_div dropdown_div">
+                                <div class="chk_css">
+                                    <input class="chk_item" type="checkbox" id="child_seats" name="child_seats"
+                                        value="2">
+                                    <label for="child_seats">提供兒童座椅</label>
+                                    <input class="chk_item" type="checkbox" id="barrier_free" name="barrier_free"
+                                        value="2">
+                                    <label for="barrier_free">無障礙設施</label>
+                                    <input class="chk_item" type="checkbox" id="min_consumption" name="min_consumption"
+                                        value="2">
+                                    <label for="min_consumption">最低消費限制</label>
+                                    <input class="chk_item" type="checkbox" id="limit_meal_time" name="limit_meal_time"
+                                        value="2">
+                                    <label for="limit_meal_time">限制用餐時間</label>
+                                    <input class="chk_item" type="checkbox" id="service_free" name="service_free"
+                                        value="2">
+                                    <label for="service_free">收取服務費</label>
+                                    <input class="chk_item" type="checkbox" id="allow_pets" name="allow_pets" value="2">
+                                    <label for="allow_pets">允許攜帶寵物</label>
+                                    <input class="chk_item" type="checkbox" id="delivery" name="delivery" value="2">
+                                    <label for="delivery">提供外送</label>
+                                    <input class="chk_item" type="checkbox" id="parking" name="parking" value="2">
+                                    <label for="parking">附設停車場</label>
+                                </div>
+                                <div class="chk_close">
+                                    關閉
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="dropdown">
+                            <a href="list_demo_search.html">
+                                <button class="search_btn">搜尋</button>
+                            </a>
+                        </div>
+                    </div>
                     <!-- </form> -->
 
                     <form action="">
@@ -292,7 +303,7 @@
                         </ol>
                     </nav>
                     <div class="rest_div">
-                        <a href="" class="rest_list_a">
+                        <a href="restaurant_page.html" class="rest_list_a">
                             <div class="rest_list">
                                 <div class="rest_img">
                                     <img src="img/restaurant_list_img/aqua水相餐廳.jpg" alt="">
@@ -301,6 +312,7 @@
                                     <span>義式料理</span>
                                     <h4>aqua水相餐廳</h4>
                                     <h5>台中市北屯區經貿三路二段100號</h5>
+                                    <span>4.7</span>
                                 </div>
                             </div>
                         </a>
@@ -313,6 +325,7 @@
                                     <span>義式料理</span>
                                     <h3>OGGI歐奇窯烤披薩</h3>
                                     <h4>台北市士林區德行西路19號</h4>
+                                    <span>4.5</span>
                                 </div>
                             </div>
                         </a>
@@ -357,7 +370,7 @@
                 $(this).parent().find(".mobile_dropdown_div").slideToggle();
                 $(this).parent().siblings().find(".mobile_dropdown_div").slideUp();
             });
-            $(".header_page").load("header.html");
+
             $(".footer_page").load("footer.html");
         });
 
