--- a/index_list/list_demo_search.html
+++ b/index_list/list_demo_search.html
@@ -23,10 +23,22 @@
 
 <body>
     <!-- 導覽列 start -->
-
-    <div class="header_page"></div>
-
-    <!-- 導覽列 over -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="LOGO"></a>
+            <div class="nav_icon">
+                <a class="nav_a" href="list.html"><i class="fas fa-store"></i>餐廳列表</a>
+                <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i>購物車</a>
+                <a class="nav_a" href="member_login.html"><i class="fas fa-user-circle"></i>會員登入</a>
+            </div>
+            <div class="rwd_icon">
+                <a class="nav_a" href="list.html"><i class="fas fa-store"></i></a>
+                <a class="nav_a" href="shoppingchar.html"><i class="fas fa-shopping-cart"></i></a>
+                <a class="nav_a" href="member_login.html"><i class="fas fa-user-circle"></i></a>
+            </div>
+        </nav>
+    </header>
+    <!-- 導覽列 end -->
 
     <section id="search_list">
         <div class="container">
@@ -439,7 +451,7 @@
                 $(this).parent().find(".mobile_dropdown_div").slideToggle();
                 $(this).parent().siblings().find(".mobile_dropdown_div").slideUp();
             });
-            $(".header_page").load("header.html");
+
             $(".footer_page").load("footer.html");
         });
 
