--- a/index_list/order_manage.html
+++ b/index_list/order_manage.html
@@ -109,11 +109,11 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="mobile_td">2022-01-08</td>
+                                <td class="mobile_td">2022-03-18</td>
                                 <td class="mobile_td">aqua水相餐廳</td>
-                                <td class="mobile_td">香煎杏鮑菇佐陳年酒醋膏松露飯</td>
-                                <td class="mobile_td">17:40</td>
-                                <td class="mobile_td">598</td>
+                                <td class="mobile_td">西西里海鹽柴魚脆薯<br>蕃茄羅勒起司搭頂級陳年油醋</td>
+                                <td class="mobile_td">12:00</td>
+                                <td class="mobile_td">564</td>
                                 <td class="order_td">
                                     <button class="detail_btn" data-toggle="modal" data-target="#detailModal">詳細訂單</button>
                                 </td>
@@ -309,11 +309,11 @@
             手機：0900-xxxxxx <br />
             電子郵件：email@gmail.com <br />
             <br />
-            訂餐餐點：香煎杏鮑菇佐陳年酒醋膏松露飯 <br />
+            訂餐餐點：香西西里海鹽柴魚脆薯*1 <br/>蕃茄羅勒起司搭頂級陳年油醋*2 <br/>
             訂餐餐廳：aqua水相餐廳 <br />
-            取餐時間：17:30 <br />
-            訂餐金額：598 <br />
-            備註：不要加茄子
+            取餐時間：12:00 <br />
+            訂餐金額：564 <br />
+            備註：需要餐具
           </div>
 
           <!-- Modal footer -->
@@ -366,9 +366,20 @@
     
               <!-- Modal footer -->
               <div class="modal-footer">
-                <button type="button" class="modal_back_btn" data-dismiss="modal">
-                  返回
-                </button>
+                <button
+                type="button"
+                class="btn btn-success btn-lg"
+                data-dismiss="modal"
+              >
+                確定
+              </button>
+              <button
+                type="button"
+                class="btn btn-danger btn-lg"
+                data-dismiss="modal"
+              >
+                返回
+              </button>
               </div>
             </div>
           </div>
