--- a/index_list/restaurant_today_booking.html
+++ b/index_list/restaurant_today_booking.html
@@ -75,6 +75,9 @@
   </aside>
 
   <div class="container">
+    <div class="search-bar">
+      <button>搜尋</button><input type="text" placeholder="訂單編號">
+    </div>
     <table class="table order_table">
       <thead>
         <tr>
